--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6ab0ce0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "start = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2ee88462",
    "metadata": {},
    "outputs": [],
@@ -20,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a8688290",
    "metadata": {},
    "outputs": [],
@@ -30,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "deb8a53b",
    "metadata": {},
    "outputs": [],
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c328f6bc",
    "metadata": {},
    "outputs": [
@@ -98,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "88d24be4",
    "metadata": {},
    "outputs": [
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9a8278dd",
    "metadata": {},
    "outputs": [
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "dfa72b9e",
    "metadata": {},
    "outputs": [
@@ -174,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "afc8ba35",
    "metadata": {},
    "outputs": [
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "7ce7dc69",
    "metadata": {},
    "outputs": [],
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "1769b10f",
    "metadata": {},
    "outputs": [],
@@ -242,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f72ec82e",
    "metadata": {},
    "outputs": [],
@@ -255,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "02090056",
    "metadata": {},
    "outputs": [
@@ -277,17 +288,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "2f514532",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3, 5, 1, ..., 6, 8, 1], dtype=uint8)"
+       "array([2, 9, 3, ..., 1, 5, 2], dtype=uint8)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,17 +309,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "4a0d822b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5, 4, 9, ..., 2, 2, 7], dtype=uint8)"
+       "array([4, 8, 5, ..., 7, 0, 6], dtype=uint8)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d0feced4",
    "metadata": {},
    "outputs": [],
@@ -329,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "ed3bbfba",
    "metadata": {},
    "outputs": [
@@ -337,17 +348,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60677    False\n",
-      "46331    False\n",
-      "37232    False\n",
-      "53172    False\n",
-      "49861    False\n",
+      "47862    False\n",
+      "51913    False\n",
+      "32975    False\n",
+      "39449    False\n",
+      "52092    False\n",
       "         ...  \n",
-      "20819    False\n",
-      "14748    False\n",
-      "623      False\n",
-      "28297    False\n",
-      "35252    False\n",
+      "38511    False\n",
+      "27270    False\n",
+      "5245     False\n",
+      "23918    False\n",
+      "39545    False\n",
       "Name: class, Length: 56000, dtype: bool\n",
       "[False  True]\n",
       "56000\n"
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "8a465d74",
    "metadata": {},
    "outputs": [
@@ -374,7 +385,7 @@
        "SGDClassifier(random_state=42)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "fa574db4",
    "metadata": {},
    "outputs": [],
@@ -396,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "23b90feb",
    "metadata": {},
    "outputs": [
@@ -404,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9893928571428572 0.987\n"
+      "0.9888214285714285 0.9865714285714285\n"
      ]
     }
    ],
@@ -424,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "72ec5ba3",
    "metadata": {},
    "outputs": [],
@@ -434,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "4bb48427",
    "metadata": {},
    "outputs": [],
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "343b3a89",
    "metadata": {},
    "outputs": [
@@ -453,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.98328601 0.98794664 0.9813029 ]\n"
+      "[0.9858574  0.98832164 0.97064181]\n"
      ]
     }
    ],
@@ -466,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "0631ab4d",
    "metadata": {},
    "outputs": [],
@@ -476,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "59bd2edf",
    "metadata": {},
    "outputs": [
@@ -486,7 +497,7 @@
        "SGDClassifier(random_state=42)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "b4c3835c",
    "metadata": {
     "scrolled": true
@@ -507,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.88776986 0.85927037 0.88492446]\n"
+      "[0.86805593 0.87089516 0.88085289]\n"
      ]
     }
    ],
@@ -519,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "d20427fc",
    "metadata": {},
    "outputs": [],
@@ -529,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "8f98781d",
    "metadata": {},
    "outputs": [
@@ -537,16 +548,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[5365    0   26   20   11   37   33    5   51   25]\n",
-      " [   1 5969   50   53    5   28    9    8   99   32]\n",
-      " [  56   51 4654  274   76   46   97   82  165   39]\n",
-      " [  34   10  100 5113   13  168   16   45  121   96]\n",
-      " [  18   17   39   17 4795   23   63   44   98  389]\n",
-      " [  71   16   24  439   86 3996  107   21  214  121]\n",
-      " [  64   20   37   13   27  134 5177    7   62    6]\n",
-      " [  20   16   75  124   75   15    9 5008   40  414]\n",
-      " [  50   81   90  485   33  249   38   27 4122  234]\n",
-      " [  34   20   13  105  181   42    5  177   59 4931]]\n"
+      "[[5270    0   34   14   11    9   63    6   81   18]\n",
+      " [   3 5955   77   23    8   13   23   23  168   14]\n",
+      " [  42   36 4924   97   64   26  139   71  158   31]\n",
+      " [  21   17  235 4860   27   88   67   81  250   75]\n",
+      " [   7   19   48    8 4965    9   97   53   84  239]\n",
+      " [  77   18   70  377  105 3683  188   27  346   93]\n",
+      " [  40    8   91    3   37   53 5229    5   35    1]\n",
+      " [  25   20  109   10   67   10    7 5450   28  134]\n",
+      " [  44  102  200  171   67  108   65   58 4565  123]\n",
+      " [  27   17   48   87  564   36    5  542  172 4002]]\n"
      ]
     }
    ],
@@ -557,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "55341dec",
    "metadata": {},
    "outputs": [
@@ -575,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "dad8c5fa",
    "metadata": {},
    "outputs": [],
@@ -587,19 +598,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1038f01a",
+   "execution_count": 31,
+   "id": "d6492848",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "end = time.time()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "14bef5a3",
+   "execution_count": 32,
+   "id": "d5857139",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-608.3053050041199\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(start - end)"
+   ]
   }
  ],
  "metadata": {
@@ -618,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
