--- a/lab6/lab6.ipynb
+++ b/lab6/lab6.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "53cb210d",
+   "id": "edb7c650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0eea10ba",
+   "id": "36bb61ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "74bc1d2c",
+   "id": "ec924eed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d115c31f",
+   "execution_count": 4,
+   "id": "b72803ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7db526cd",
+   "execution_count": 5,
+   "id": "68933e2e",
    "metadata": {},
    "outputs": [
     {
@@ -75,8 +75,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "36a1d0e2",
+   "execution_count": 6,
+   "id": "592b4833",
    "metadata": {},
    "outputs": [
     {
@@ -102,15 +102,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f464b5",
+   "id": "6b9baa6c",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "7f5e9d23",
+   "execution_count": 7,
+   "id": "385a0d8f",
    "metadata": {},
    "outputs": [
     {
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a158526b",
+   "execution_count": 8,
+   "id": "c40505f6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.8351648351648352, 0.7017543859649122)\n",
-      "(0.9648351648351648, 0.6754385964912281)\n"
+      "(0.8351648351648352, 0.6929824561403509)\n",
+      "(0.9648351648351648, 0.6666666666666666)\n"
      ]
     }
    ],
@@ -170,8 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "93ff4820",
+   "execution_count": 9,
+   "id": "97830efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,8 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ff8b052",
+   "execution_count": 10,
+   "id": "187d655d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,18 +202,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cb78a909",
+   "execution_count": 11,
+   "id": "6805b5b4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.9956043956043956, 0.6666666666666666)\n",
-      "(0.9208791208791208, 0.6754385964912281)\n",
-      "(1.0, 0.6140350877192983)\n",
-      "(0.9648351648351648, 0.6403508771929824)\n"
+      "(0.9934065934065934, 0.6491228070175439)\n",
+      "(0.9252747252747253, 0.7017543859649122)\n",
+      "(1.0, 0.6228070175438597)\n",
+      "(0.9604395604395605, 0.6578947368421053)\n"
      ]
     }
    ],
@@ -254,15 +254,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3989d560",
+   "execution_count": 12,
+   "id": "c3c9e8d0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.9934065934065934, 0.6754385964912281)\n"
+      "(0.9978021978021978, 0.7105263157894737)\n"
      ]
     }
    ],
@@ -279,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5a8d2716",
+   "execution_count": 13,
+   "id": "9f3fd2b1",
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +293,7 @@
    ],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
+    "#AdaBoost\n",
     "ada_clf = AdaBoostClassifier(n_estimators=30)\n",
     "ada_clf.fit(X_train, y_train)\n",
     "accTrain = accuracy_score(y_train, ada_clf.predict(X_train))\n",
@@ -303,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "813c16c7",
+   "execution_count": 14,
+   "id": "8ed0a8b5",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +318,7 @@
    ],
    "source": [
     "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "#Gradient Boosting\n",
     "gradient_clf = GradientBoostingClassifier(n_estimators=30)\n",
     "gradient_clf.fit(X_train, y_train)\n",
     "accTrain = accuracy_score(y_train, gradient_clf.predict(X_train))\n",
@@ -327,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "c9b94939",
+   "execution_count": 15,
+   "id": "82acb6f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,16 +349,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18695281",
+   "execution_count": 16,
+   "id": "516747c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#----------------część trzecia----------------#"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daee47af",
+   "id": "58709717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "twoFeatures_clf = BaggingClassifier(DecisionTreeClassifier(), n_estimators=30, max_samples=0.5, max_features=2, bootstrap_features=False, bootstrap=True)\n",
+    "twoFeatures_clf.fit(X_train, y_train)\n",
+    "accTrain = accuracy_score(y_train, twoFeatures_clf.predict(X_train))\n",
+    "accTest = accuracy_score(y_test, twoFeatures_clf.predict(X_test))\n",
+    "twoFeatures_clf_acc = [accTrain, accTest]\n",
+    "print(twoFeatures_clf_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a156be12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileObject = open(\"acc_fea.pkl\", 'wb')\n",
+    "pkl.dump(twoFeatures_clf_acc, fileObject)\n",
+    "fileObject.close()\n",
+    "\n",
+    "clf_list3 = [twoFeatures_clf]\n",
+    "fileObject = open(\"fea.pkl\", 'wb')\n",
+    "pkl.dump(clf_list3, fileObject)\n",
+    "fileObject.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c2e8b01",
    "metadata": {},
    "outputs": [],
    "source": []
